fix css scrollbars

--- a/packages/@coorpacademy-components/src/molecule/dashboard/cards-list/style.css
+++ b/packages/@coorpacademy-components/src/molecule/dashboard/cards-list/style.css
@@ -82,6 +82,8 @@
 @media tablet {
   .cards {
     overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
   }
 
   .arrow {
